MINOR Using box-sizing to lay out form fields rather than relying on hacky 90% widths + pixel-based paddings, which makes it impossible to align anything outside of the field container the these elements. Using conditional CSS to disable field padding if box-sizing is not available. Generalized "stacked" form pattern in _form.scss, fixed CMS actions padding to align with fields.

--- a/admin/scss/_forms.scss
+++ b/admin/scss/_forms.scss
@@ -151,8 +151,9 @@ form.nostyle {
 	textarea,
 	select,
 	.TreeDropdownField {
-		width: 90%;
+		width: 100%;
 		max-width: $grid-horizontal * 64;
+		@include box-sizing(border-box);
 	}
 	
 	input.text, 
@@ -184,21 +185,33 @@ form.nostyle {
 		@include background-image(linear-gradient(darken(#efefef, 20%), #efefef 10%, #fff 90%, darken(#efefef, 20%)));
 		border: 1px solid lighten($color-medium-separator, 20%);
 	}
+
+}
+
+form.stacked .field, .field.stacked {
+	label {
+		display: block;
+		float: none;
+		padding-bottom: 10px;
+	}
 	
+	.middleColumn {
+		margin-left: 0px;
+		clear: left;
+	}
+}
+
+.field {	
 	/* TreeDropdowns */
 	.TreeDropdownField {
-		padding: 0 14px 0 0;
+		padding: 0;
 		
 		.treedropdownfield-panel {
 			border: 1px solid lighten($color-medium-separator, 20%);
 			border-top: none;
-			padding-right: 14px;
 			
 			@include border-bottom-left-radius(4px);
 			@include border-bottom-right-radius(4px);
-		}
-		.treedropdownfield-toggle-panel-link {
-			margin-right: -14px;
 		}
 		
 		&.treedropdownfield-open-tree {
@@ -430,10 +443,12 @@ form.nostyle {
 /** ----------------------------------------------------
  * Checkbox Field
  * ---------------------------------------------------- */
-.field {
-	&.checkbox {
-		padding-left: $grid-horizontal * 24;
-		margin-bottom: $grid-vertical;
+.field.checkbox {
+	padding-left: $grid-horizontal * 23;
+	margin-bottom: $grid-vertical;
+
+	input {
+		margin-left: 0;
 	}
 }
 /** ----------------------------------------------------
@@ -479,16 +494,12 @@ form.nostyle {
 		visibility: hidden; // enabled by JS
 	}
 
-	label {
-		display: block;
-		float: none;
-		padding-bottom: 10px;
+	.mceEditor {
+		input, select {
+			width: auto;
+		}	
 	}
 	
-	.middleColumn {
-		margin-left: 0px;
-		clear: left;
-	}
 }
 
 
